Fix scss alignment issue

--- a/src/app/history/work-unit-editor/work-unit-editor.component.scss
+++ b/src/app/history/work-unit-editor/work-unit-editor.component.scss
@@ -3,7 +3,7 @@
 
   input {
     outline-color: red;
-    border: 1px solid red;
+    border: 2px solid red;
     color: red;
   }
 }
